--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "beerman",
+  "description": "portfolio site",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Daniel Beerman <hi@danbeerman.com>",
   "dependencies": {
     "gatsby": "^1.9.223",
     "gatsby-cli": "1.1.45",
