--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby-cli": "1.1.45",
     "gatsby-link": "^1.6.38",
     "gatsby-plugin-react-helmet": "^2.0.6",
+    "react-fontawesome": "1.6.1",
     "react-helmet": "^5.2.0",
     "react-responsive-modal": "2.0.1",
     "react-scrollable-anchor": "0.6.1",
