--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-link": "^1.6.38",
     "gatsby-plugin-react-helmet": "^2.0.6",
     "react-fontawesome": "1.6.1",
+    "react-ga": "2.4.1",
     "react-helmet": "^5.2.0",
     "react-icons": "2.2.7",
     "react-responsive-modal": "2.0.1",
